// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CsvFormatter > should convert to csv excluding crypto amount 1`] = `
"ID,Date & Time,Sender,Recipient,Fiat Amount [USD],Fiat Fee [USD],Fiat Total [USD],Rate
8f913b6b719e7767d49861c0aec79ced212767645cb793d75d2f1b89abb49877,23.07.2020 08,D6Z26L69gdk9qYmTv5uzk3uGepigtHY4ax,D5pVkhZbSb4UNXvfmF6j7zdau8yGxfKwSv,0,0,0,0
0d8d12d7980bf0183ef015e5938e56c44c3db4d3695cefd16ccec4a7bfd8a2cf,23.07.2020 08,D6Z26L69gdk9qYmTv5uzk3uGepigtHY4ax,DKY5eyQUKKYyaCfPp6MUv3Y4FW6EbNF53A,0,0,0,0
73b0aec130840a50adf747a8dd18faf1109c47ac8faef6579d59a9737f3cb33e,23.07.2020 07,D6Z26L69gdk9qYmTv5uzk3uGepigtHY4ax,DKY5eyQUKKYyaCfPp6MUv3Y4FW6EbNF53A,0,0,0,0
b32ea92c3142b1ee21a1a287524bd97d16f4f84097be085e6b89f23d07170a37,23.07.2020 07,D6Z26L69gdk9qYmTv5uzk3uGepigtHY4ax,DHg1jYVS23D6GP7RuhckuJsYAr6crH6c3Z,0,0,0,0
35c3e88e868daf1423fd1d9421bc911fbb4331954fd07aacc57cd20644f53f9e,08.07.2020 11,D6Z26L69gdk9qYmTv5uzk3uGepigtHY4ax,DM7UiH4b2rW2Nv11Wu6ToiZi8MJhGCEWhP,0,0,0,0
83f09fca14b9924d07ff50cdabf6ee9be35b12663b1222fee2dde4fdbb64d3c5,28.04.2020 09,D6Z26L69gdk9qYmTv5uzk3uGepigtHY4ax,DRgF3PvzeGWndQjET7dZsSmnrc6uAy23ES,0,0,0,0
2347cc788408d805546b9afdcf50814e1bfaae601d3e180c81bc5101fe8b212c,27.04.2020 11,D6Z26L69gdk9qYmTv5uzk3uGepigtHY4ax,D6Z26L69gdk9qYmTv5uzk3uGepigtHY4ax,0,0,0,0
56e855785642d94b5d47ed53ad6c10ec8fbdff4036ba8c301621fd9381d16867,27.04.2020 11,D6Z26L69gdk9qYmTv5uzk3uGepigtHY4ax,DPv1wzB2xJtJQH5PaCMnw1V9mUBugzP8yQ,0,0,0,0
9295a735c9a12b5b0c9ba70c21c82ca8307f9bc666102e95982924186fee2ef3,27.04.2020 11,D6Z26L69gdk9qYmTv5uzk3uGepigtHY4ax,Other,0,0,0,0
939e33e863a179e7169b378c88f1aabbf941828efc1c1b34be07ae6c1905b083,26.04.2020 09,D6Z26L69gdk9qYmTv5uzk3uGepigtHY4ax,D8c6zgQ2CYWvbCzqZbhWCKXDFHyje9tUMR,0,0,0,0
34b557950ed485985aad81ccefaa374b7c81150c52f8ef4621cbbb907b2c829c,08.04.2020 07,D6Z26L69gdk9qYmTv5uzk3uGepigtHY4ax,Multiple (4),0,0,0,0
1e9b975eff66a731095876c3b6cbff14fd4dec3bb37a4127c46db3d69131067e,07.08.2020 09,D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb,Other,0,0,0,0
d819c5199e323a62a4349948ff075edde91e509028329f66ec76b8518ad1e493,12.09.2020 12,D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD,Vote Transaction,0,0,0,0
32e5278cb72f24f2c04c4797dbfbffa7072f6a30e016093fdd3f7660a2ee2faf,12.09.2020 12,D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD,Vote Transaction,0,0,0,0
29cc21f2941a6696a330ab1949f3b35b1614028e157827b7d3b6dd7c6ee13f90,14.11.2018 13,D6Z26L69gdk9qYmTv5uzk3uGepigtHY4ax,DHawRTCWDw4e4YaPyF8QEdWUmxiwtVmQ5z,0,0,0,0"
`;

exports[`CsvFormatter > should convert to csv excluding date 1`] = `
"ID,Sender,Recipient,Amount,Fee,Total,Fiat Amount [USD],Fiat Fee [USD],Fiat Total [USD],Rate
8f913b6b719e7767d49861c0aec79ced212767645cb793d75d2f1b89abb49877,D6Z26L69gdk9qYmTv5uzk3uGepigtHY4ax,D5pVkhZbSb4UNXvfmF6j7zdau8yGxfKwSv,400000,0,400000,0,0,0,0
0d8d12d7980bf0183ef015e5938e56c44c3db4d3695cefd16ccec4a7bfd8a2cf,D6Z26L69gdk9qYmTv5uzk3uGepigtHY4ax,DKY5eyQUKKYyaCfPp6MUv3Y4FW6EbNF53A,50000,0,50000,0,0,0,0
73b0aec130840a50adf747a8dd18faf1109c47ac8faef6579d59a9737f3cb33e,D6Z26L69gdk9qYmTv5uzk3uGepigtHY4ax,DKY5eyQUKKYyaCfPp6MUv3Y4FW6EbNF53A,100000,0,100000,0,0,0,0
b32ea92c3142b1ee21a1a287524bd97d16f4f84097be085e6b89f23d07170a37,D6Z26L69gdk9qYmTv5uzk3uGepigtHY4ax,DHg1jYVS23D6GP7RuhckuJsYAr6crH6c3Z,100000,0,100000,0,0,0,0
35c3e88e868daf1423fd1d9421bc911fbb4331954fd07aacc57cd20644f53f9e,D6Z26L69gdk9qYmTv5uzk3uGepigtHY4ax,DM7UiH4b2rW2Nv11Wu6ToiZi8MJhGCEWhP,10000,0,10000,0,0,0,0
83f09fca14b9924d07ff50cdabf6ee9be35b12663b1222fee2dde4fdbb64d3c5,D6Z26L69gdk9qYmTv5uzk3uGepigtHY4ax,DRgF3PvzeGWndQjET7dZsSmnrc6uAy23ES,270000,0,270000,0,0,0,0
2347cc788408d805546b9afdcf50814e1bfaae601d3e180c81bc5101fe8b212c,D6Z26L69gdk9qYmTv5uzk3uGepigtHY4ax,D6Z26L69gdk9qYmTv5uzk3uGepigtHY4ax,0,0,0,0,0,0,0
56e855785642d94b5d47ed53ad6c10ec8fbdff4036ba8c301621fd9381d16867,D6Z26L69gdk9qYmTv5uzk3uGepigtHY4ax,DPv1wzB2xJtJQH5PaCMnw1V9mUBugzP8yQ,10000,0,10000,0,0,0,0
9295a735c9a12b5b0c9ba70c21c82ca8307f9bc666102e95982924186fee2ef3,D6Z26L69gdk9qYmTv5uzk3uGepigtHY4ax,Other,0,0,0,0,0,0,0
939e33e863a179e7169b378c88f1aabbf941828efc1c1b34be07ae6c1905b083,D6Z26L69gdk9qYmTv5uzk3uGepigtHY4ax,D8c6zgQ2CYWvbCzqZbhWCKXDFHyje9tUMR,100000,0,100000,0,0,0,0
34b557950ed485985aad81ccefaa374b7c81150c52f8ef4621cbbb907b2c829c,D6Z26L69gdk9qYmTv5uzk3uGepigtHY4ax,Multiple (4),0,0,0,0,0,0,0
1e9b975eff66a731095876c3b6cbff14fd4dec3bb37a4127c46db3d69131067e,D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb,Other,0,0,0,0,0,0,0
d819c5199e323a62a4349948ff075edde91e509028329f66ec76b8518ad1e493,D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD,Vote Transaction,0,-0.20716584,-0.20716584,0,0,0,0
32e5278cb72f24f2c04c4797dbfbffa7072f6a30e016093fdd3f7660a2ee2faf,D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD,Vote Transaction,0,-0.20716584,-0.20716584,0,0,0,0
29cc21f2941a6696a330ab1949f3b35b1614028e157827b7d3b6dd7c6ee13f90,D6Z26L69gdk9qYmTv5uzk3uGepigtHY4ax,DHawRTCWDw4e4YaPyF8QEdWUmxiwtVmQ5z,10,0,10,0,0,0,0"
`;

exports[`CsvFormatter > should convert to csv excluding fiat amount 1`] = `
"ID,Date & Time,Sender,Recipient,Amount,Fee,Total
8f913b6b719e7767d49861c0aec79ced212767645cb793d75d2f1b89abb49877,23.07.2020 08,D6Z26L69gdk9qYmTv5uzk3uGepigtHY4ax,D5pVkhZbSb4UNXvfmF6j7zdau8yGxfKwSv,400000,0,400000
0d8d12d7980bf0183ef015e5938e56c44c3db4d3695cefd16ccec4a7bfd8a2cf,23.07.2020 08,D6Z26L69gdk9qYmTv5uzk3uGepigtHY4ax,DKY5eyQUKKYyaCfPp6MUv3Y4FW6EbNF53A,50000,0,50000
73b0aec130840a50adf747a8dd18faf1109c47ac8faef6579d59a9737f3cb33e,23.07.2020 07,D6Z26L69gdk9qYmTv5uzk3uGepigtHY4ax,DKY5eyQUKKYyaCfPp6MUv3Y4FW6EbNF53A,100000,0,100000
b32ea92c3142b1ee21a1a287524bd97d16f4f84097be085e6b89f23d07170a37,23.07.2020 07,D6Z26L69gdk9qYmTv5uzk3uGepigtHY4ax,DHg1jYVS23D6GP7RuhckuJsYAr6crH6c3Z,100000,0,100000
35c3e88e868daf1423fd1d9421bc911fbb4331954fd07aacc57cd20644f53f9e,08.07.2020 11,D6Z26L69gdk9qYmTv5uzk3uGepigtHY4ax,DM7UiH4b2rW2Nv11Wu6ToiZi8MJhGCEWhP,10000,0,10000
83f09fca14b9924d07ff50cdabf6ee9be35b12663b1222fee2dde4fdbb64d3c5,28.04.2020 09,D6Z26L69gdk9qYmTv5uzk3uGepigtHY4ax,DRgF3PvzeGWndQjET7dZsSmnrc6uAy23ES,270000,0,270000
2347cc788408d805546b9afdcf50814e1bfaae601d3e180c81bc5101fe8b212c,27.04.2020 11,D6Z26L69gdk9qYmTv5uzk3uGepigtHY4ax,D6Z26L69gdk9qYmTv5uzk3uGepigtHY4ax,0,0,0
56e855785642d94b5d47ed53ad6c10ec8fbdff4036ba8c301621fd9381d16867,27.04.2020 11,D6Z26L69gdk9qYmTv5uzk3uGepigtHY4ax,DPv1wzB2xJtJQH5PaCMnw1V9mUBugzP8yQ,10000,0,10000
9295a735c9a12b5b0c9ba70c21c82ca8307f9bc666102e95982924186fee2ef3,27.04.2020 11,D6Z26L69gdk9qYmTv5uzk3uGepigtHY4ax,Other,0,0,0
939e33e863a179e7169b378c88f1aabbf941828efc1c1b34be07ae6c1905b083,26.04.2020 09,D6Z26L69gdk9qYmTv5uzk3uGepigtHY4ax,D8c6zgQ2CYWvbCzqZbhWCKXDFHyje9tUMR,100000,0,100000
34b557950ed485985aad81ccefaa374b7c81150c52f8ef4621cbbb907b2c829c,08.04.2020 07,D6Z26L69gdk9qYmTv5uzk3uGepigtHY4ax,Multiple (4),0,0,0
1e9b975eff66a731095876c3b6cbff14fd4dec3bb37a4127c46db3d69131067e,07.08.2020 09,D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb,Other,0,0,0
d819c5199e323a62a4349948ff075edde91e509028329f66ec76b8518ad1e493,12.09.2020 12,D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD,Vote Transaction,0,-0.20716584,-0.20716584
32e5278cb72f24f2c04c4797dbfbffa7072f6a30e016093fdd3f7660a2ee2faf,12.09.2020 12,D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD,Vote Transaction,0,-0.20716584,-0.20716584
29cc21f2941a6696a330ab1949f3b35b1614028e157827b7d3b6dd7c6ee13f90,14.11.2018 13,D6Z26L69gdk9qYmTv5uzk3uGepigtHY4ax,DHawRTCWDw4e4YaPyF8QEdWUmxiwtVmQ5z,10,0,10"
`;

exports[`CsvFormatter > should convert to csv excluding header row 1`] = `
"8f913b6b719e7767d49861c0aec79ced212767645cb793d75d2f1b89abb49877,23.07.2020 08,D6Z26L69gdk9qYmTv5uzk3uGepigtHY4ax,D5pVkhZbSb4UNXvfmF6j7zdau8yGxfKwSv,400000,0,400000,0,0,0,0
0d8d12d7980bf0183ef015e5938e56c44c3db4d3695cefd16ccec4a7bfd8a2cf,23.07.2020 08,D6Z26L69gdk9qYmTv5uzk3uGepigtHY4ax,DKY5eyQUKKYyaCfPp6MUv3Y4FW6EbNF53A,50000,0,50000,0,0,0,0
73b0aec130840a50adf747a8dd18faf1109c47ac8faef6579d59a9737f3cb33e,23.07.2020 07,D6Z26L69gdk9qYmTv5uzk3uGepigtHY4ax,DKY5eyQUKKYyaCfPp6MUv3Y4FW6EbNF53A,100000,0,100000,0,0,0,0
b32ea92c3142b1ee21a1a287524bd97d16f4f84097be085e6b89f23d07170a37,23.07.2020 07,D6Z26L69gdk9qYmTv5uzk3uGepigtHY4ax,DHg1jYVS23D6GP7RuhckuJsYAr6crH6c3Z,100000,0,100000,0,0,0,0
35c3e88e868daf1423fd1d9421bc911fbb4331954fd07aacc57cd20644f53f9e,08.07.2020 11,D6Z26L69gdk9qYmTv5uzk3uGepigtHY4ax,DM7UiH4b2rW2Nv11Wu6ToiZi8MJhGCEWhP,10000,0,10000,0,0,0,0
83f09fca14b9924d07ff50cdabf6ee9be35b12663b1222fee2dde4fdbb64d3c5,28.04.2020 09,D6Z26L69gdk9qYmTv5uzk3uGepigtHY4ax,DRgF3PvzeGWndQjET7dZsSmnrc6uAy23ES,270000,0,270000,0,0,0,0
2347cc788408d805546b9afdcf50814e1bfaae601d3e180c81bc5101fe8b212c,27.04.2020 11,D6Z26L69gdk9qYmTv5uzk3uGepigtHY4ax,D6Z26L69gdk9qYmTv5uzk3uGepigtHY4ax,0,0,0,0,0,0,0
56e855785642d94b5d47ed53ad6c10ec8fbdff4036ba8c301621fd9381d16867,27.04.2020 11,D6Z26L69gdk9qYmTv5uzk3uGepigtHY4ax,DPv1wzB2xJtJQH5PaCMnw1V9mUBugzP8yQ,10000,0,10000,0,0,0,0
9295a735c9a12b5b0c9ba70c21c82ca8307f9bc666102e95982924186fee2ef3,27.04.2020 11,D6Z26L69gdk9qYmTv5uzk3uGepigtHY4ax,Other,0,0,0,0,0,0,0
939e33e863a179e7169b378c88f1aabbf941828efc1c1b34be07ae6c1905b083,26.04.2020 09,D6Z26L69gdk9qYmTv5uzk3uGepigtHY4ax,D8c6zgQ2CYWvbCzqZbhWCKXDFHyje9tUMR,100000,0,100000,0,0,0,0
34b557950ed485985aad81ccefaa374b7c81150c52f8ef4621cbbb907b2c829c,08.04.2020 07,D6Z26L69gdk9qYmTv5uzk3uGepigtHY4ax,Multiple (4),0,0,0,0,0,0,0
1e9b975eff66a731095876c3b6cbff14fd4dec3bb37a4127c46db3d69131067e,07.08.2020 09,D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb,Other,0,0,0,0,0,0,0
d819c5199e323a62a4349948ff075edde91e509028329f66ec76b8518ad1e493,12.09.2020 12,D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD,Vote Transaction,0,-0.20716584,-0.20716584,0,0,0,0
32e5278cb72f24f2c04c4797dbfbffa7072f6a30e016093fdd3f7660a2ee2faf,12.09.2020 12,D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD,Vote Transaction,0,-0.20716584,-0.20716584,0,0,0,0
29cc21f2941a6696a330ab1949f3b35b1614028e157827b7d3b6dd7c6ee13f90,14.11.2018 13,D6Z26L69gdk9qYmTv5uzk3uGepigtHY4ax,DHawRTCWDw4e4YaPyF8QEdWUmxiwtVmQ5z,10,0,10,0,0,0,0"
`;

exports[`CsvFormatter > should convert to csv excluding sender and recipient 1`] = `
"ID,Date & Time,Amount,Fee,Total,Fiat Amount [USD],Fiat Fee [USD],Fiat Total [USD],Rate
8f913b6b719e7767d49861c0aec79ced212767645cb793d75d2f1b89abb49877,23.07.2020 08,400000,0,400000,0,0,0,0
0d8d12d7980bf0183ef015e5938e56c44c3db4d3695cefd16ccec4a7bfd8a2cf,23.07.2020 08,50000,0,50000,0,0,0,0
73b0aec130840a50adf747a8dd18faf1109c47ac8faef6579d59a9737f3cb33e,23.07.2020 07,100000,0,100000,0,0,0,0
b32ea92c3142b1ee21a1a287524bd97d16f4f84097be085e6b89f23d07170a37,23.07.2020 07,100000,0,100000,0,0,0,0
35c3e88e868daf1423fd1d9421bc911fbb4331954fd07aacc57cd20644f53f9e,08.07.2020 11,10000,0,10000,0,0,0,0
83f09fca14b9924d07ff50cdabf6ee9be35b12663b1222fee2dde4fdbb64d3c5,28.04.2020 09,270000,0,270000,0,0,0,0
2347cc788408d805546b9afdcf50814e1bfaae601d3e180c81bc5101fe8b212c,27.04.2020 11,0,0,0,0,0,0,0
56e855785642d94b5d47ed53ad6c10ec8fbdff4036ba8c301621fd9381d16867,27.04.2020 11,10000,0,10000,0,0,0,0
9295a735c9a12b5b0c9ba70c21c82ca8307f9bc666102e95982924186fee2ef3,27.04.2020 11,0,0,0,0,0,0,0
939e33e863a179e7169b378c88f1aabbf941828efc1c1b34be07ae6c1905b083,26.04.2020 09,100000,0,100000,0,0,0,0
34b557950ed485985aad81ccefaa374b7c81150c52f8ef4621cbbb907b2c829c,08.04.2020 07,0,0,0,0,0,0,0
1e9b975eff66a731095876c3b6cbff14fd4dec3bb37a4127c46db3d69131067e,07.08.2020 09,0,0,0,0,0,0,0
d819c5199e323a62a4349948ff075edde91e509028329f66ec76b8518ad1e493,12.09.2020 12,0,-0.20716584,-0.20716584,0,0,0,0
32e5278cb72f24f2c04c4797dbfbffa7072f6a30e016093fdd3f7660a2ee2faf,12.09.2020 12,0,-0.20716584,-0.20716584,0,0,0,0
29cc21f2941a6696a330ab1949f3b35b1614028e157827b7d3b6dd7c6ee13f90,14.11.2018 13,10,0,10,0,0,0,0"
`;

exports[`CsvFormatter > should convert to csv excluding transation id 1`] = `
"Date & Time,Sender,Recipient,Amount,Fee,Total,Fiat Amount [USD],Fiat Fee [USD],Fiat Total [USD],Rate
23.07.2020 08,D6Z26L69gdk9qYmTv5uzk3uGepigtHY4ax,D5pVkhZbSb4UNXvfmF6j7zdau8yGxfKwSv,400000,0,400000,0,0,0,0
23.07.2020 08,D6Z26L69gdk9qYmTv5uzk3uGepigtHY4ax,DKY5eyQUKKYyaCfPp6MUv3Y4FW6EbNF53A,50000,0,50000,0,0,0,0
23.07.2020 07,D6Z26L69gdk9qYmTv5uzk3uGepigtHY4ax,DKY5eyQUKKYyaCfPp6MUv3Y4FW6EbNF53A,100000,0,100000,0,0,0,0
23.07.2020 07,D6Z26L69gdk9qYmTv5uzk3uGepigtHY4ax,DHg1jYVS23D6GP7RuhckuJsYAr6crH6c3Z,100000,0,100000,0,0,0,0
08.07.2020 11,D6Z26L69gdk9qYmTv5uzk3uGepigtHY4ax,DM7UiH4b2rW2Nv11Wu6ToiZi8MJhGCEWhP,10000,0,10000,0,0,0,0
28.04.2020 09,D6Z26L69gdk9qYmTv5uzk3uGepigtHY4ax,DRgF3PvzeGWndQjET7dZsSmnrc6uAy23ES,270000,0,270000,0,0,0,0
27.04.2020 11,D6Z26L69gdk9qYmTv5uzk3uGepigtHY4ax,D6Z26L69gdk9qYmTv5uzk3uGepigtHY4ax,0,0,0,0,0,0,0
27.04.2020 11,D6Z26L69gdk9qYmTv5uzk3uGepigtHY4ax,DPv1wzB2xJtJQH5PaCMnw1V9mUBugzP8yQ,10000,0,10000,0,0,0,0
27.04.2020 11,D6Z26L69gdk9qYmTv5uzk3uGepigtHY4ax,Other,0,0,0,0,0,0,0
26.04.2020 09,D6Z26L69gdk9qYmTv5uzk3uGepigtHY4ax,D8c6zgQ2CYWvbCzqZbhWCKXDFHyje9tUMR,100000,0,100000,0,0,0,0
08.04.2020 07,D6Z26L69gdk9qYmTv5uzk3uGepigtHY4ax,Multiple (4),0,0,0,0,0,0,0
07.08.2020 09,D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb,Other,0,0,0,0,0,0,0
12.09.2020 12,D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD,Vote Transaction,0,-0.20716584,-0.20716584,0,0,0,0
12.09.2020 12,D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD,Vote Transaction,0,-0.20716584,-0.20716584,0,0,0,0
14.11.2018 13,D6Z26L69gdk9qYmTv5uzk3uGepigtHY4ax,DHawRTCWDw4e4YaPyF8QEdWUmxiwtVmQ5z,10,0,10,0,0,0,0"
`;

exports[`CsvFormatter > should convert to csv including header row 1`] = `
"ID,Date & Time,Sender,Recipient,Amount,Fee,Total,Fiat Amount [USD],Fiat Fee [USD],Fiat Total [USD],Rate
8f913b6b719e7767d49861c0aec79ced212767645cb793d75d2f1b89abb49877,23.07.2020 08,D6Z26L69gdk9qYmTv5uzk3uGepigtHY4ax,D5pVkhZbSb4UNXvfmF6j7zdau8yGxfKwSv,400000,0,400000,0,0,0,0
0d8d12d7980bf0183ef015e5938e56c44c3db4d3695cefd16ccec4a7bfd8a2cf,23.07.2020 08,D6Z26L69gdk9qYmTv5uzk3uGepigtHY4ax,DKY5eyQUKKYyaCfPp6MUv3Y4FW6EbNF53A,50000,0,50000,0,0,0,0
73b0aec130840a50adf747a8dd18faf1109c47ac8faef6579d59a9737f3cb33e,23.07.2020 07,D6Z26L69gdk9qYmTv5uzk3uGepigtHY4ax,DKY5eyQUKKYyaCfPp6MUv3Y4FW6EbNF53A,100000,0,100000,0,0,0,0
b32ea92c3142b1ee21a1a287524bd97d16f4f84097be085e6b89f23d07170a37,23.07.2020 07,D6Z26L69gdk9qYmTv5uzk3uGepigtHY4ax,DHg1jYVS23D6GP7RuhckuJsYAr6crH6c3Z,100000,0,100000,0,0,0,0
35c3e88e868daf1423fd1d9421bc911fbb4331954fd07aacc57cd20644f53f9e,08.07.2020 11,D6Z26L69gdk9qYmTv5uzk3uGepigtHY4ax,DM7UiH4b2rW2Nv11Wu6ToiZi8MJhGCEWhP,10000,0,10000,0,0,0,0
83f09fca14b9924d07ff50cdabf6ee9be35b12663b1222fee2dde4fdbb64d3c5,28.04.2020 09,D6Z26L69gdk9qYmTv5uzk3uGepigtHY4ax,DRgF3PvzeGWndQjET7dZsSmnrc6uAy23ES,270000,0,270000,0,0,0,0
2347cc788408d805546b9afdcf50814e1bfaae601d3e180c81bc5101fe8b212c,27.04.2020 11,D6Z26L69gdk9qYmTv5uzk3uGepigtHY4ax,D6Z26L69gdk9qYmTv5uzk3uGepigtHY4ax,0,0,0,0,0,0,0
56e855785642d94b5d47ed53ad6c10ec8fbdff4036ba8c301621fd9381d16867,27.04.2020 11,D6Z26L69gdk9qYmTv5uzk3uGepigtHY4ax,DPv1wzB2xJtJQH5PaCMnw1V9mUBugzP8yQ,10000,0,10000,0,0,0,0
9295a735c9a12b5b0c9ba70c21c82ca8307f9bc666102e95982924186fee2ef3,27.04.2020 11,D6Z26L69gdk9qYmTv5uzk3uGepigtHY4ax,Other,0,0,0,0,0,0,0
939e33e863a179e7169b378c88f1aabbf941828efc1c1b34be07ae6c1905b083,26.04.2020 09,D6Z26L69gdk9qYmTv5uzk3uGepigtHY4ax,D8c6zgQ2CYWvbCzqZbhWCKXDFHyje9tUMR,100000,0,100000,0,0,0,0
34b557950ed485985aad81ccefaa374b7c81150c52f8ef4621cbbb907b2c829c,08.04.2020 07,D6Z26L69gdk9qYmTv5uzk3uGepigtHY4ax,Multiple (4),0,0,0,0,0,0,0
1e9b975eff66a731095876c3b6cbff14fd4dec3bb37a4127c46db3d69131067e,07.08.2020 09,D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb,Other,0,0,0,0,0,0,0
d819c5199e323a62a4349948ff075edde91e509028329f66ec76b8518ad1e493,12.09.2020 12,D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD,Vote Transaction,0,-0.20716584,-0.20716584,0,0,0,0
32e5278cb72f24f2c04c4797dbfbffa7072f6a30e016093fdd3f7660a2ee2faf,12.09.2020 12,D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD,Vote Transaction,0,-0.20716584,-0.20716584,0,0,0,0
29cc21f2941a6696a330ab1949f3b35b1614028e157827b7d3b6dd7c6ee13f90,14.11.2018 13,D6Z26L69gdk9qYmTv5uzk3uGepigtHY4ax,DHawRTCWDw4e4YaPyF8QEdWUmxiwtVmQ5z,10,0,10,0,0,0,0"
`;

exports[`CsvFormatter > should convert to csv using semicolon delimiter 1`] = `
"ID;Date & Time;Sender;Recipient;Amount;Fee;Total;Fiat Amount [USD];Fiat Fee [USD];Fiat Total [USD];Rate
8f913b6b719e7767d49861c0aec79ced212767645cb793d75d2f1b89abb49877;23.07.2020 08;D6Z26L69gdk9qYmTv5uzk3uGepigtHY4ax;D5pVkhZbSb4UNXvfmF6j7zdau8yGxfKwSv;400000;0;400000;0;0;0;0
0d8d12d7980bf0183ef015e5938e56c44c3db4d3695cefd16ccec4a7bfd8a2cf;23.07.2020 08;D6Z26L69gdk9qYmTv5uzk3uGepigtHY4ax;DKY5eyQUKKYyaCfPp6MUv3Y4FW6EbNF53A;50000;0;50000;0;0;0;0
73b0aec130840a50adf747a8dd18faf1109c47ac8faef6579d59a9737f3cb33e;23.07.2020 07;D6Z26L69gdk9qYmTv5uzk3uGepigtHY4ax;DKY5eyQUKKYyaCfPp6MUv3Y4FW6EbNF53A;100000;0;100000;0;0;0;0
b32ea92c3142b1ee21a1a287524bd97d16f4f84097be085e6b89f23d07170a37;23.07.2020 07;D6Z26L69gdk9qYmTv5uzk3uGepigtHY4ax;DHg1jYVS23D6GP7RuhckuJsYAr6crH6c3Z;100000;0;100000;0;0;0;0
35c3e88e868daf1423fd1d9421bc911fbb4331954fd07aacc57cd20644f53f9e;08.07.2020 11;D6Z26L69gdk9qYmTv5uzk3uGepigtHY4ax;DM7UiH4b2rW2Nv11Wu6ToiZi8MJhGCEWhP;10000;0;10000;0;0;0;0
83f09fca14b9924d07ff50cdabf6ee9be35b12663b1222fee2dde4fdbb64d3c5;28.04.2020 09;D6Z26L69gdk9qYmTv5uzk3uGepigtHY4ax;DRgF3PvzeGWndQjET7dZsSmnrc6uAy23ES;270000;0;270000;0;0;0;0
2347cc788408d805546b9afdcf50814e1bfaae601d3e180c81bc5101fe8b212c;27.04.2020 11;D6Z26L69gdk9qYmTv5uzk3uGepigtHY4ax;D6Z26L69gdk9qYmTv5uzk3uGepigtHY4ax;0;0;0;0;0;0;0
56e855785642d94b5d47ed53ad6c10ec8fbdff4036ba8c301621fd9381d16867;27.04.2020 11;D6Z26L69gdk9qYmTv5uzk3uGepigtHY4ax;DPv1wzB2xJtJQH5PaCMnw1V9mUBugzP8yQ;10000;0;10000;0;0;0;0
9295a735c9a12b5b0c9ba70c21c82ca8307f9bc666102e95982924186fee2ef3;27.04.2020 11;D6Z26L69gdk9qYmTv5uzk3uGepigtHY4ax;Other;0;0;0;0;0;0;0
939e33e863a179e7169b378c88f1aabbf941828efc1c1b34be07ae6c1905b083;26.04.2020 09;D6Z26L69gdk9qYmTv5uzk3uGepigtHY4ax;D8c6zgQ2CYWvbCzqZbhWCKXDFHyje9tUMR;100000;0;100000;0;0;0;0
34b557950ed485985aad81ccefaa374b7c81150c52f8ef4621cbbb907b2c829c;08.04.2020 07;D6Z26L69gdk9qYmTv5uzk3uGepigtHY4ax;Multiple (4);0;0;0;0;0;0;0
1e9b975eff66a731095876c3b6cbff14fd4dec3bb37a4127c46db3d69131067e;07.08.2020 09;D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb;Other;0;0;0;0;0;0;0
d819c5199e323a62a4349948ff075edde91e509028329f66ec76b8518ad1e493;12.09.2020 12;D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD;Vote Transaction;0;-0.20716584;-0.20716584;0;0;0;0
32e5278cb72f24f2c04c4797dbfbffa7072f6a30e016093fdd3f7660a2ee2faf;12.09.2020 12;D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD;Vote Transaction;0;-0.20716584;-0.20716584;0;0;0;0
29cc21f2941a6696a330ab1949f3b35b1614028e157827b7d3b6dd7c6ee13f90;14.11.2018 13;D6Z26L69gdk9qYmTv5uzk3uGepigtHY4ax;DHawRTCWDw4e4YaPyF8QEdWUmxiwtVmQ5z;10;0;10;0;0;0;0"
`;
